# classification

./: .gitignore  Dockerfile  Shopee_Daily Data_ Feb 11.2026.xlsx  Test.xlsx  classify.py  cms.py  docker-compose.yml  main.py  pyproject.toml  settings.py  test_llm_simple.py  ~$test.xlsx
src/: classifier.py  detector.py  get_kws.py  keyword_analysis.py  label-rules.json  llm_cache.py  settings.py  source-mapping.json  utils.py
src/keywords/: keywords.json
src/models/: __init__.py
src/models/Giao Hàng Nhanh/: label_encoder.pkl  optimized_text_classifier.pkl
src/models/SPX Express/: label_encoder.pkl  optimized_text_classifier.pkl
src/models/Shopee/: label_encoder.pkl  optimized_text_classifier.pkl
src/models/ShopeeFood/: label_encoder.pkl  optimized_text_classifier.pkl
src/prompts/: content_relevance.txt  name_tag_detection.txt
src/prompts/classifier/: Giao Hàng Nhanh.txt  SPX Express.txt  Shopee.txt
src/prompts/detector/: content_relevance.txt  detect.txt  name_tag_detection.txt
src/rules/: label-kws.json  label-rules.json  llm-rules.json  source-mapping.json
