[project]
name = "classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "openai>=2.24.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scikit-learn==1.6.1",
    "streamlit>=1.54.0",
    "xlsxwriter>=3.2.9",
]
